--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ pytz==2020.1
 sip==4.19.13
 six==1.15.0
 tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1602488891005/work
+
+scipy~=1.5.3
+numpy~=1.19.1
+matplotlib~=3.3.2
+pandas~=1.1.3
